# dcps-cold-blob

./: .gitignore  CLAUDE.md  LICENSE  README.md  resume_jobs.sh  roadmap.md
dcps/: .gitignore  README.md  pyproject.toml
dcps/dcps/: __init__.py  anomaly.py  config.py  geo.py  h1.py  h2.py  h3.py  io.py  multiple_testing.py  nature_style.py  order_parameter.py  phase.py  products.py  regrid.py  spatial_stats.py  surrogates.py  te_ksg.py  winding.py
dcps/scripts/: _subpanel_sahel.py  apply_z_test_md99.py  apply_z_test_rapid35.py  audit_stationarity.py  autonomous_figure_refresh.py  autonomous_holocene_hunt.py  bandpass_sensitivity.py  baroclinic_adjustment.py  ceda_past1000_ingest.py  ceda_past1000_queue.py  cmip6_contrast_pangeo.py  cmip6_emergent_constraint.py  cmip6_past1000.py  cmip6_picontrol_dna.py  cold_blob_unprecedented.py  cold_blob_unprecedented_bootstrap.py  cold_blob_unprecedented_symmetric.py  compare_q_exit_vs_secondary.py  compute_basin_ci_cache.py  compute_eddy_eke_ci.py  compute_eke_epoch_diff.py  compute_eke_timeseries.py  compute_eke_timeseries_co2.py  compute_epoch_eke_maps.py  compute_fig7_jet.py  compute_fig7_sahel.py  compute_fig7_walker.py  compute_lag_40yr_bootstrap.py  compute_lag_40yr_pi_psd.py  compute_obs_q_eke_atlantic.py  compute_obs_q_eke_full_period.py  compute_q_eke_cesm_hosing.py  cross_era_contrast.py  depth_split_null_test.py  eke_quiescence_eddy_resolving.py  eke_quiescence_test.py  emergent_constraint_no_cmcc.py  era5_atmos_regression.py  ews_eke_residualised.py  fetch_era5.py  (+78 more)
dcps/tests/: test_ksg.py  test_regrid.py  (+1 more)
(+25 files in other folders)
