[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dcps"
version = "0.1.0"
description = "Delay-Coupled Phase-Synchronization analysis of the North Atlantic"
requires-python = ">=3.10"
dependencies = [
    "xarray>=2024.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "netCDF4>=1.6",
    "dask>=2024.1",
    "matplotlib>=3.7",
    "cartopy>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["dcps*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
